# stockev.qtask_list

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.agents/skills/pai-qtask-list-codexskill-oc/: SKILL.md
.agents/skills/pai-qtask-list-codexskill-oc/agents/: openai.yaml
.agents/skills/pai-qtask-list-codexskill-oc/references/: classes.md  (+3 more)
.claude/skills/qtask-usage/: SKILL.md
.codex/skills/qtask-list-library/: SKILL.md
cli/: __main__.py
dashboard/: auth.py  main.py
dashboard/static/css/: app.css
dashboard/static/js/: api.js  app.js  components.js  utils.js
dashboard/templates/: index.html  login.html
docs/design/: dashboard-ux-20260622-overview.md  qtask-dashboard-20260620-auth.md  qtask-dashboard-20260620-lifecycle.md  qtask-dashboard-20260620-operations.md
docs/dev/: PLAN-001-dashboard-lifecycle-OUTCOME.md  PLAN-001-dashboard-lifecycle.md  PLAN-002-dashboard-usability-OUTCOME.md  PLAN-002-dashboard-usability.md  PLAN-003-dashboard-operations-OUTCOME.md  PLAN-003-dashboard-operations.md  PLAN-004-dashboard-auth-OUTCOME.md  PLAN-004-dashboard-auth.md  PLAN-005-dashboard-ux.md  PLAN-005-validation-stability-OUTCOME.md  PLAN-005-validation-stability.md  PLAN-006-cli-admin-unification-OUTCOME.md  PLAN-006-cli-admin-unification.md  PLAN-006-dashboard-ux-v2-OUTCOME.md  PLAN-006-dashboard-ux-v2.md  PLAN-007-cli-admin-read-control-OUTCOME.md  PLAN-007-cli-admin-read-control.md  PLAN-008-cli-admin-history-watch-OUTCOME.md  PLAN-008-cli-admin-history-watch.md  PLAN-009-doc-skill-sync-OUTCOME.md  PLAN-009-doc-skill-sync.md  PLAN-010-expired-admin-boundary-OUTCOME.md  PLAN-010-expired-admin-boundary.md  PLAN-011-doc-dashboard-state-sync-OUTCOME.md  PLAN-011-doc-dashboard-state-sync.md  PLAN-012-history-status-scan-OUTCOME.md  PLAN-012-history-status-scan.md
docs/strategy/: README.md
examples/: 01_generator.py  02_fetch_worker.py  03_store_worker.py  README.md  generator.py
examples/finance/: calculate_worker.py
examples/stockev/: fetch_worker.py  store_worker.py
qtask_list/: __init__.py  admin.py  archiver.py  history.py  queue.py  storage.py  worker.py
remote_storage/: __init__.py  server.py
skills/qtask-list-usage/: SKILL.md
skills/qtask-list-usage/agents/: openai.yaml
tests/: test_archiver_manual.py  test_cli.py  test_dashboard_api.py  test_integration.py  test_queue.py  test_remote_storage.py  test_worker.py
(+6 files in other folders)
