[project]
name = "qtask_list"
version = "0.1.1"
description = "Distributed task queue based on Redis List"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "redis>=5.0.0",
    "loguru>=0.7.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "zstandard>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
dashboard = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "requests>=2.31.0",
]
storage = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
qtask = "cli.__main__:app"
qtask_list = "cli.__main__:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["qtask_list*", "cli*", "dashboard*", "remote_storage*"]

[tool.setuptools.package-data]
dashboard = ["templates/*.html", "static/css/*.css", "static/js/*.js"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
norecursedirs = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
    "iosql",
    "stockev.qtask_list",
]
